Criando CQRS generico para melhor separação das responsabilidades